--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.25.6"
+          go-version-file: go.mod
+          cache-dependency-path: go.sum
 
       - name: Run Go tests
         run: go test ./...
